FreeCodeCamp/FullStack/CSS/Product Landing Page/product-landing-page.css
:root{

    --main-color1: rgb(241, 237, 237);
    --secondary-color1: #bbb8b8;
    --highlight-color: rgb(255, 202, 27);
}

*{
    box-sizing: border-box;
    /*border: 1px solid;*/
}

html{
    font-size: 62.5%;
    font-family: Arial, Helvetica, sans-serif;
}

body{
    background-color: var(--main-color1);
}



/* HEADER STYLING */
h1{
    font-size: 34px;
    text-align: center;
}

h2{
    font-size:30px;
}

h3{
    font-size: 24px;
}

#header{

    margin: 0;
    padding-right: 5%;
    position: fixed;
    top:0;
    left:0;
    display:flex;
    background-color: var(--main-color1);
    border-bottom: 2px solid var(--secondary-color1);
    justify-content:space-evenly;
    align-items: center;
}


#logo{
    
    width: 50%;
}
#header-img{
    width: 100%;
}

#nav-bar{
    display: flex;
    align-items:center;
    width: 50%; 
    height: 100%;

}


#nav-bar-list{
    display:flex;
    list-style-type: none;
    width:100%;
    align-items: center;
    justify-content: right;
    font-size: 2em;
    height: 100%;
    padding:0;
    margin: 0;

}

@media screen and (max-width: 750px){
    .nav-bar-item{
        font-size: 1.1rem;
    }
    .footer-nav-bar-item{
        font-size: 1.1rem;
    }
}
@media screen and(min-width:751px){

    .nav-bar-item{
        font-size: 2.5rem;
    }
    .footer-nav-bar-item{
        font-size: 2.5rem;
    }
}
#nav-bar-list .nav-bar-item:not(:first-child){
    padding-left: 5%;
    border-left: 2px solid var(--secondary-color1);
}

#nav-bar-list .nav-bar-item:not(:last-child){
    padding-right:5%;
}

.nav-bar-item{

    
    border: inherit;
    display:flex;
    font-weight:bold;
    height: 2em;
    align-items: center;
    justify-content: center;
    
}

.nav-bar-item a{
    text-decoration: none;
    color:black;
    border-radius: 1rem;
    padding: 1rem;
}
.nav-bar-item a:visited{
    text-decoration: none;
    color: black;
}

.nav-bar-item a:hover{
    background-color: var(--secondary-color1);
    color: var(--main-color1);
}

/*FORM STYLING*/


input[type="email"]{

    height: 4rem;
    width: 60%;
    min-width: 300px;
    text-align: center;
    font-size: 2rem;

}
form{
    margin: 0 auto;
    width: 30%;
    display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 30px;
}
#email-label{
    display:block;
    width: 100%;
    text-align:center;
    margin-top: 50px;
    font-size: 2.5rem;
}

#submit{
    width: 30%;
    min-width: 200px;
    height: 3rem;
    font-size: 2rem;
    font-weight: bold;
    border: none;
    border-radius: 2rem;
    background: linear-gradient(90deg, var(--highlight-color) ,rgb(255, 230, 0), var(--highlight-color))
}

/*Benefits styling*/

#benefits{
    display:flex;
    width: 80%;
    margin: 50px auto;
    flex-direction: column;
    align-items: s;

}

.benefit{
    display:flex;
    margin: 20px;
    align-items:center;
}

.benefit h3{
    margin:0;
}

.benefit p{
    margin:0;
    padding: 0;
    font-size: 2rem;
}

.benefit i{
    font-size: 60px;
    margin-right: 20px;
    min-width: 100px;
    text-align: center;
    color: var(--highlight-color);
    -webkit-text-stroke: 2px black;
}


/*Video styling*/

#add-campaign{
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    background-color: var(--secondary-color1);
    padding: 30px;
}

#add-campaign h2{
    width: 100%;
    text-align: center;
}

iframe{
    width: 400px;
    height: 255px;
}


/*Shop styling*/

#shop{
    width: 100%;
    display: flex;
    overflow-x: scroll;
    padding: 0 50px;

}

h2{
    text-align: center;
}
.shoe-card{

    display: flex;
    justify-content: center;
    background-color: var(--secondary-color1);
    align-items: center;
    flex-direction: column;
    margin: 20px;
    max-width: 400px;
    min-width: 400px;
    box-shadow: 5px 5px 5px grey;
    border-radius: 20px;
    overflow: hidden;
    padding: 10px;

}

.shoe-card:hover{
    background-color: var(--highlight-color);
}
.shoe-card p{

    font-size: 2rem;
    margin-top: 10px;
}
.shoe-card h3{
    margin-bottom: 10px;
}
.shoe-img{
    width: 100%;
    border-radius: 20px;
}

footer{
    display: flex;
    flex-direction: column;
    background-color: var(--secondary-color1);
    width: 100%;
    height: 100px;
    justify-content: flex-end;
    align-items: flex-end;
    padding-right: 20px;
}

footer p{
    font-size: 1.5rem;
    margin-top:5px;
}

#footer-nav-bar{
    display: flex;
    
    align-items:center;
    width: 50%;
    height: 100%;

}


#footer-nav-bar-list{
    display:flex;
    flex-direction: column;
    list-style-type: none;
    width:100%;
    align-items: center;
    justify-content: right;
    font-size: 2em;
    height: 100%;
    padding:0;
    margin: 0;

}


#footer-nav-bar-list .footer-nav-bar-item:not(:first-child){
    padding-left: 5%;
    border-left: 2px solid var(--main-color1);
}

#footer-nav-bar-list .footer-nav-bar-item:not(:last-child){
    padding-right:5%;
}

.footer-nav-bar-item{
    border:inherit;  
    display:flex;
    font-weight:bold;
    height: 2em;
    margin-bottom: 2px;
    align-items: center;
    justify-content: center;
    
}

.footer-nav-bar-item a{
    text-decoration: none;
    color:black;
    border-radius: 1rem;
    padding: 1rem;
}
.footer-nav-bar-item a:visited{
    text-decoration: none;
    color: black;
}

.footer-nav-bar-item a:hover{
    background-color: var(--main-color1);
    color: var(--secondary-color1);
}

